@@ -1,3 +1,7 @@
+* Mon Jan 07 2019 Liz Nemsick <lnemsick-simp@gmail.com> - 0.1.1
+- Confine tpm2 fact on the presence of TPM 2 tools required
+  for that fact evaluation
+
 * Wed Nov 21 2018 Adam Yohrling <adam.yohrling@onyxpoint.com> - 0.1.0
 - Added OEL support
 
